@@ -4,6 +4,9 @@ ds <- data.frame(
   ftime = rexp(n),
   fstatus = sample(0:1, size = n, replace = TRUE),
   x = factor(sample(LETTERS[1:4], size = n, replace = TRUE)),
+  same_label_1 = factor(sample(c("Yes", "No"), size = n, replace = TRUE)),
+  same_label_2 = factor(sample(c("Yes", "No"), size = n, replace = TRUE)),
+  same_label_3 = factor(sample(c("Yes", "No"), size = n, replace = TRUE)),
   boolean = sample(c(TRUE, FALSE), size = n, replace = TRUE),
   subsetting = factor(sample(c(TRUE, FALSE), size = n, replace = TRUE)))
 
@@ -18,6 +21,12 @@ test_that("Check position of reference", {
   
   a <- printCrudeAndAdjustedModel(fit, add_references=TRUE)
   expect_match(a[1,2], "ref")
+  
+  # Bug with the same label
+  a <- printCrudeAndAdjustedModel(update(fit, .~.+
+                                           same_label_1 +
+                                           same_label_2 +
+                                           same_label_3), add_references=TRUE, desc_column=TRUE)
   
   tmp <- getCrudeAndAdjustedModelData(fit)
   b <- printCrudeAndAdjustedModel(tmp, add_references=TRUE)
