@@ -4,6 +4,7 @@ Changes for 0.6.1
 -----------------
 * Changed versioning
 * Fixed bug for printCrudeAndAdjusted when using matrix from the getC&A
+* Fixed bug when boolean desc_column was generated
 * Added stop() when using descriptive column without add_refrerences
 
 Changes for 0.6.0.1
